@@ -1,0 +1,5 @@
+module Irbtools
+  module More
+    VERSION = '1.7.2'
+  end
+end
